feat: migrate room and game session management to Redis