@@ -3,26 +3,30 @@ package com.spcotoon.speeddrawing.gameStomp.gameLobby.service;
 import com.spcotoon.speeddrawing.gameStomp.gameLobby.dto.LobbyGameRoomPubDto;
 import com.spcotoon.speeddrawing.gameStomp.gameLobby.dto.LobbyUserDto;
 import com.spcotoon.speeddrawing.gameStomp.gameLobby.dto.LobbyUserListPubDto;
-import com.spcotoon.speeddrawing.gameStomp.gameRoom.domain.GameRoom;
-import com.spcotoon.speeddrawing.gameStomp.gameRoom.repository.GameRoomRepository;
-import com.spcotoon.speeddrawing.gameStomp.util.RedisSessionUserRegistry;
+import com.spcotoon.speeddrawing.gameStomp.gameLobby.session.UserSession;
+import com.spcotoon.speeddrawing.gameStomp.gameLobby.registry.RedisUserSessionRegistry;
+import com.spcotoon.speeddrawing.gameStomp.gameRoom.registry.RedisGameRoomSessionRegistry;
+import com.spcotoon.speeddrawing.gameStomp.gameRoom.session.GameRoomSession;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class LobbyDataService {
 
-    private final RedisSessionUserRegistry redisSessionUserRegistry;
-    private final GameRoomRepository gameRoomRepository;
+    private final RedisUserSessionRegistry redisUserSessionRegistry;
+    private final RedisGameRoomSessionRegistry redisGameRoomSessionRegistry;
 
     public LobbyUserListPubDto getCurrentUsers() {
-        List<LobbyUserDto> users = redisSessionUserRegistry.getAllConnectedUsers().stream()
-                .map(nickname -> new LobbyUserDto(null, nickname))
-                .collect(Collectors.toList());
+        List<UserSession> userSessions = redisUserSessionRegistry.getAllConnectedUsers();
+
+        List<LobbyUserDto> users = userSessions.stream()
+                .map(us-> LobbyUserDto.builder()
+                        .memberId(us.getMemberId())
+                        .nickname(us.getNickname())
+                        .build()).toList();
 
         int totalCount = users.size();
 
@@ -30,13 +34,15 @@ public class LobbyDataService {
     }
 
     public List<LobbyGameRoomPubDto> getCurrentRooms() {
-        List<GameRoom> gameRooms = gameRoomRepository.findAll();
+        List<GameRoomSession> gameRooms = redisGameRoomSessionRegistry.getAllRooms();
 
         return gameRooms.stream().map(room -> LobbyGameRoomPubDto.builder()
-                .roomId(room.getId())
-                .title(room.getTitle())
-                .status(String.valueOf(room.getStatus()))
-//                .currentParticipants(room.getGameRoomParticipants().size())
-                .maxParticipants(room.getMaxParticipants()).build()).toList();
+                        .roomId(room.getRoomId())
+                        .title(room.getTitle())
+                        .status(String.valueOf(room.getStatus()))
+                        .currentParticipants(room.getParticipantsCount())
+                        .maxParticipants(room.getMaxCount())
+                        .build())
+                .toList();
     }
 }
